Added strain iconography to strainlist.

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Weed Wizard — Find the perfect strain to fit your mood</title>
+    <title>Strain Search — Find the perfect strain to fit your mood</title>
   </head>
   <body>
     <noscript>
